# vector-calculator

./: .gitignore  README.md  main.py  pyproject.toml
examples/: demo.py
src/vector_calculator/: __init__.py  exceptions.py  vector.py
tests/: test_vector.py
