[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-calculator"
version = "0.1.0"
description = "A small, immutable n-dimensional Euclidean vector library."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "timur-manjosov" }]
keywords = ["vector", "linear-algebra", "math"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/vector_calculator"]

[tool.pytest.ini_options]
# Run the test suite straight from the source tree without an install step.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
extraPaths = ["src"]
